# meetup

./: .gitignore  Dockerfile  Dockerfile.categories  Dockerfile.meetings  Dockerfile.users  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
infraestructure/: .terraform.tfstate.lock.info  2.infra.tf  3.cognito.tf  4.ecr.tf  5.ecs.tf  6.alb.tf  7.rds.tf  deploy-containers.sh  dev.tfvars  variables.tf
microservices/categories/: .env.example  database.py  eventing.py  models.py  routes.py  server.py  usecases.py
microservices/events/: database.py  entities.py  repository.py  routes.py  server.py
microservices/meetings/: .env.example  database.py  eventing.py  models.py  out.py  routes.py  server.py  usecases.py
microservices/users/: .env.example  routes.py  server.py  usecases.py
