[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Gabriel Brotas", email = "gabrielbrotas22@gmail.com"},
]
dependencies = [
    "fastapi>=0.78.0",
    "uvicorn>=0.17.6",
    "sqlalchemy>=1.4.37",
    "boto3>=1.24.14",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]
[tool.pdm.scripts]
"dev:event" = "uvicorn microservices.events.server:app --reload"
"dev:users" = "python3 ./microservices/users/server.py"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
