[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Gabriel Brotas", email = "gabrielbrotas22@gmail.com"},
]
dependencies = [
    "fastapi>=0.78.0",
    "uvicorn>=0.17.6",
    "sqlalchemy>=1.4.37",
    "boto3>=1.24.14",
    "python-dotenv>=0.20.0",
    "psycopg2>=2.9.3",
    "requests>=2.28.0",
    "asgiref>=3.5.2",
    "mysql-connector-python>=8.0.29",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]
allow_prereleases = true

[tool.pdm.scripts]
"dev:meetings" = "python3 ./microservices/meetings/server.py"
"dev:users" = "python3 ./microservices/users/server.py"
"dev:categories" = "python3 ./microservices/categories/server.py"

"prod:meetings" = "python3 ./server.py"
"prod:users" = "python3 ./server.py"
"prod:categories" = "python3 ./server.py"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
